# helpish

./: CONTEXT.md  Makefile  README.md  pyproject.toml
src/helpish/: __init__.py  app.py  words.py
src/helpish/core/: lexicon.py
tests/core/: test_lexicon.py
